package com.example.layered.model

enum class UserRole {
    PROJECT_LEADER,
    TEAM_MEMBER,
    MANAGER
}